[package]
name = "platter2"
description = "Load files on web and desktop asynchronously"
version = "0.1.6"
authors = ["Ryan Goldstein <ryanisaacg@gmail.com>"]
categories = ["filesystem"]
keywords = ["async", "file"]
license = "MIT OR Apache-2.0 OR Zlib"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Nazariglez/platter2"

[badges]
maintenance = { status = "actively-developed" }

[features]
"web-sys" = ["web_sys", "js-sys", "wasm-bindgen"]

[dependencies]
futures-util = { version = "0.3.21", default-features = false }
stdweb = { version = "0.4.20", optional = true }

js-sys = { version = "0.3.59", optional = true }
wasm-bindgen = { version = "0.2.82", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
package = "web-sys"
version = "0.3.59"
optional = true
features = [
    "XmlHttpRequest",
    "XmlHttpRequestEventTarget",
    "XmlHttpRequestResponseType",
]
